--- a/page.css
+++ b/page.css
@@ -310,7 +310,7 @@ body {
   }
   
   ::-webkit-scrollbar-thumb {
-    background: #3b00d1;
+    background: #ffffff;
   }
   
   ::-webkit-scrollbar-thumb:hover {
